add_subdirectory(AppleAPIC)
add_subdirectory(AppleI386GenericPlatform)
add_subdirectory(AppleIntelPIIXATA)
add_subdirectory(ApplePS2Controller)
add_subdirectory(IOACPIFamily)
add_subdirectory(IOATAFamily)
add_subdirectory(IOPCIFamily)
add_subdirectory(IOStorageFamily)
add_subdirectory(corecrypto)
add_subdirectory(pthread)
